# srt-translator-ai

./: Ballerina.2025.2160p.AMZN.WEB-DL.DDP5.1.HDR.H.265-BYNDR.srt  README.md  pyproject.toml  requirements.txt
src/: cli.py  config.py
src/services/: srt_parser.py  translator.py
