[project]
name = "srt-translator-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepl>=1.22.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "pydantic-settings>=2.10.1",
    "srt>=3.5.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
srt-translate = "cli:app"
